--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -6,4 +6,13 @@
   Email:<input type='text' name='user[email]'>
   Password:<input type='password' name='password'>
   Confirm Password:<input type='password' name='confirm_pw'>
+  <input type='submit' value='Submit'>
 </form>
+
+<% if @errors %>
+  <ul>
+    <% @errors.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
