--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,3 +2,8 @@
   <input type='hidden' name='_method' value='delete'>
   <input type='submit' value='Log Out'>
 </form>
+
+<form action='/users' method='get'>
+  Get users within <input type='text' name='distance'> miles of me
+  <input type='submit'>
+</form>
