--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <!--
     normalize.css removes cross-browser differences in defaults, e.g.,
     differences in how form elements appear between Firefox and IE
@@ -10,14 +11,16 @@
   <!--
     application.css is where you put your styles
   -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/application.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>Bandwagon</title>
 </head>
 <body>
+<div class="container-fluid">
   <a href='/'>Home</a>
 <% unless current_user %>
   <a href='/users/new'>Sign Up</a>
@@ -25,11 +28,12 @@
 <% end %>
 <% if current_user %>
   <a href="/users/<%= current_user.id %>">Hi, <%= current_user.first_name %></a>
-  <form action='/sessions' method='post'>
+  <form id='logout' action='/sessions' method='post'>
     <input type='hidden' name='_method' value='delete'>
     <input type='submit' value='Log Out'>
   </form>
-<% end %>
+  <% end %>
   <%= yield %>
+  </div>
 </body>
 </html>
