Add parallax jumbotron image

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/application.css">
@@ -33,7 +34,7 @@
     </div>
   </nav>
   <%= yield %>
-  <footer class="container-fluid text-center navbar-fixed-bottom">
+  <footer class="container-fluid text-center">
     <p class="text-muted">&copy; 2016 Kim Stephenson</p>
   </footer>
 </body>
