Add validations to user

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <div class="bg"></div>
 <div class="jumbotron container">
-  <h1>Bootstrap Jumbotron</h1>
-  <p class="lead">+ Parallax Effect using jQuery</p>
+  <h1 id="bandwagon-header">Bandwagon</h1>
+  <p class="lead">Connect with local musicians</p>
 </div>
 
 <div class="container">
