Add city & state to new user based on API data

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,6 @@
 <h3>Create a free account to connect with musicians</h3>
 
-<form action='/users' method='post'>
+<form id="new-user-form" action='/users' method='post'>
   First Name:<input type='text' name='user[first_name]'>
   Last Name:<input type='text' name='user[last_name]'>
   Email:<input type='text' name='user[email]'>
@@ -17,5 +17,4 @@
     <% end %>
   </ul>
 <% end %>
-
 
