--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,6 @@
 <h3>Create a free account to connect with musicians</h3>
 
+<div class="container">
 <form id="new-user-form" action='/users' method='post'>
   First Name:<input type='text' name='user[first_name]'>
   Last Name:<input type='text' name='user[last_name]'>
@@ -17,4 +18,5 @@
     <% end %>
   </ul>
 <% end %>
+</div>
 
