--- a/app/views/users/_searchform.erb
+++ b/app/views/users/_searchform.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<form action='/users' method='get'>
+<form id="searchform" action='/users' method='get'>
   Search for musicians within <input type='text' name='distance'> miles of me
   <input type='text' name='instrument' placeholder='Instrument'>
   <input type='text' name='genre' placeholder='Genre'>
