--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div id="users-list" class="container">
   <% if @users %>
   <ul>
     <% @users.each do |user| %>
       <% unless user == current_user %>
-        <li><a href="/users/<%= user.id %>"><%= user.first_name %> <%= user.last_name %></a></li>
+        <li><a href="/users/<%= user.id %>"" target="blank"><%= user.first_name %> <%= user.last_name %></a></li>
         <p><%= @distances[user.zip_code] %> miles away</p>
       <% end %>
     <% end %>
