--- a/public/css/application.css
+++ b/public/css/application.css
@@ -16,10 +16,12 @@
 
 #bandwagon-header {
   font-family: "Bungee Shade";
+  padding-top: 150px;
 }
 
 .bg {
   background: url('../bandwagon-header.jpg') no-repeat center center;
+  background-size: 100%;
   position: fixed;
   width: 100%;
   height: 600px; /*same height as jumbotron */
