Fix navbar and footer

--- a/app/views/users/_searchform.erb
+++ b/app/views/users/_searchform.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="fixed-nav-pad container">
 <form id="searchform" action='/users' method='get'>
   Search for musicians within <input type='text' name='distance'> miles of me
   <input type='text' name='instrument' placeholder='Instrument'>
