--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -1,4 +1,4 @@
-<div id="users-list" class="container">
+<div id="users-list" class="fixed-nav-pad container">
   <% if @users %>
   <ul>
     <% @users.each do |user| %>
