--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,7 @@
+<div class="fixed-nav-pad container">
 <h3>Create a free account to connect with musicians</h3>
 
-<div class="container">
+<div>
 <form id="new-user-form" action='/users' method='post'>
   First Name:<input type='text' name='user[first_name]'>
   Last Name:<input type='text' name='user[last_name]'>
@@ -18,5 +19,6 @@
     <% end %>
   </ul>
 <% end %>
+</div>
 </div>
 
