--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class='fixed-nav-pad container'>
 <h2><%= @user.first_name %> <%= @user.last_name%></h2>
 <h3><%= @user.city %>, <%= @user.state %></h3>
 <h3>Instruments</h3>
