--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,7 @@
   <title>Bandwagon</title>
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href='/'>Bandwagon</a>
@@ -36,7 +36,7 @@
     </div>
   </nav>
   <%= yield %>
-  <footer class="container-fluid text-center">
+  <footer class="container-fluid text-center navbar-fixed-bottom">
     <p class="text-muted">&copy; 2016 Kim Stephenson</p>
   </footer>
 </body>
