--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,7 @@
+.fixed-nav-pad {
+  padding-top: 70px;
+}
+
 #logout-form {
   margin-top: 7px;
 }
@@ -16,7 +20,7 @@
 
 #bandwagon-header {
   font-family: "Bungee Shade";
-  padding-top: 150px;
+  padding-top: 200px;
 }
 
 .bg {
