--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,20 +4,22 @@
 <h3>Instruments</h3>
   <ul>
   <% @user.instruments.each do |inst| %>
-    <li><%= inst.name %></li>
+    <li><%= inst.name.capitalize %></li>
   <% end %>
 </ul>
 <h3>Genres</h3>
   <ul>
   <% @user.genres.each do |genre| %>
-    <li><%= genre.name %></li>
+    <li><%= genre.name.capitalize %></li>
   <% end %>
 </ul>
 </div>
 
 <% if @user == current_user %>
   <div class="container">
-    <a href="/users/<%= current_user.id %>/edit">Edit My Profile</a>
+    <a href="/users/<%= current_user.id %>/edit">Update Personal Info</a>
+    <a href="/users/<%= current_user.id %>/instruments/edit">Edit Instruments</a>
+    <a href="/users/<%= current_user.id %>/genres/edit">Edit Genres</a>
   </div>
 <% end %>
 
