Refactor encrypted password assignment

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -7,7 +7,7 @@
   Last Name:<input type='text' name='user[last_name]'>
   Email:<input type='text' name='user[email]'>
   Zip Code:<input type='text' name='user[zip_code]'>
-  Password:<input type='password' name='password'>
+  Password:<input type='password' name='user[password]'>
   Confirm Password:<input type='password' name='confirm_pw'>
   <input type='submit' value='Submit'>
 </form>
