--- a/app/views/users/_genres_edit.erb
+++ b/app/views/users/_genres_edit.erb
@@ -1,4 +1,4 @@
-<div class='fixed-nav-pad container'>
+<div class='checkbox-form'>
   <form action='/users/<%= current_user.id %>/genres/edit' method='post'>
     <input type="hidden" name="_method" value="put">
     <% Genre.all.each do |g| %>
