--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -4,7 +4,7 @@
     <% @users.each do |user| %>
       <% unless user == current_user %>
         <li><a href="/users/<%= user.id %>"" target="blank"><%= user.first_name %> <%= user.last_name %></a></li>
-        <p><%= @distances[user.zip_code] %> miles away</p>
+        <p><%= @distances[user.zip_code].round(2) %> miles away</p>
       <% end %>
     <% end %>
     <% end %>
