--- a/app/views/users/_instruments_edit.erb
+++ b/app/views/users/_instruments_edit.erb
@@ -1,5 +1,5 @@
-<div class='checkbox-form'>
-  <form action='/users/<%= current_user.id %>/instruments/edit' method='post'>
+<div class='checkbox-form-div'>
+  <form class="checkbox-form" action='/users/<%= current_user.id %>/instruments/edit' method='post'>
     <input type="hidden" name="_method" value="put">
     <% Instrument.all.each do |i| %>
       <% if current_user.instruments.include? i %>
