--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -36,7 +36,7 @@
     </div>
   </nav>
   <%= yield %>
-  <footer class="container-fluid text-center">
+  <footer class="container-fluid text-center navbar-fixed-bottom">
     <p class="text-muted">&copy; 2016 Kim Stephenson</p>
   </footer>
 </body>
