--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
 <div class='fixed-nav-pad container'>
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-xs-8">
       <h2><%= @user.first_name %> <%= @user.last_name%></h2>
       <h3><%= @user.city %>, <%= @user.state %></h3>
       <h3>About Me</h3>
@@ -16,9 +16,9 @@
     </div>
 
     <% if @user == current_user %>
-      <div id="edit-links" class="container">
-        <a href="/users/<%= current_user.id %>/edit">Update Personal Info</a>
-        <a class="checkbox-link" href="/users/<%= current_user.id %>/instruments/edit">Edit Instruments</a>
+      <div class="col-xs-4" id="edit-links" class="container">
+        <a href="/users/<%= current_user.id %>/edit">Update Personal Info</a><br>
+        <a class="checkbox-link" href="/users/<%= current_user.id %>/instruments/edit">Edit Instruments</a><br>
         <a class="checkbox-link" href="/users/<%= current_user.id %>/genres/edit">Edit Genres</a>
       </div>
     <% end %>
