Display searched users by distance

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,8 +4,7 @@
   <p class="lead">Connect with local musicians</p>
 </div>
 
-<div class="container">
-  <div class="row">
+<div class="container-fluid">
     <h2>Page Content</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
     Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
@@ -28,8 +27,7 @@
     Aliquam in felis sit amet augue.
   </div>
 
-  <div class="container">
-  <div class="row">
+  <div class="container-fluid">
     <h2>Page Content</h2>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
     Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
@@ -50,7 +48,7 @@
     Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
     dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
     Aliquam in felis sit amet augue.
-  </div>
+</div>
 
 
 
