--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,4 +1,4 @@
-<div class="fixed-nav-pad container">
+<div class="container-fluid">
 <form id="searchform" action='/users' method='get'>
   Search for musicians within <input type='text' name='distance'> miles of me
   <select name='instrument'>
