--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,7 +14,7 @@
   <title>Bandwagon</title>
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href='/'>Bandwagon</a>
