--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,4 +1,4 @@
-<div class ='fixed-nav-pad container'>
+<div class ='container-fluid'>
   <form action='/users/<%= current_user.id %>' method='post'>
     <input type="hidden" name="_method" value="put">
     First Name:<input type="text" name="user[first_name]" value="<%= current_user.first_name %>">
