--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,4 +1,4 @@
-<div class="fixed-nav-pad container">
+<div class="container-fluid">
 <h3>Create a free account to connect with musicians</h3>
 
 <div>
