--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<div class='fixed-nav-pad container'>
+<div class='container-fluid'>
   <div class="row">
     <div class="col-xs-8">
       <h2><%= @user.first_name %> <%= @user.last_name%></h2>
@@ -16,20 +16,20 @@
     </div>
 
     <% if @user == current_user %>
-      <div class="col-xs-4" id="edit-links" class="container">
+      <div class="col-xs-4" id="edit-links">
         <a href="/users/<%= current_user.id %>/edit">Update Personal Info</a><br>
         <a class="checkbox-link" href="/users/<%= current_user.id %>/instruments/edit">Edit Instruments</a><br>
         <a class="checkbox-link" href="/users/<%= current_user.id %>/genres/edit">Edit Genres</a>
       </div>
     <% end %>
+
+    <% if current_user && @user != current_user %>
+      <div class='col-xs-4'>
+        <a href="/users/<%= @user.id %>/contact">Contact <%= @user.first_name %></a>
+      </div>
+    <% end %>
   </div>
 </div>
-
-<% if current_user && @user != current_user %>
-  <div class='container'>
-    <a href="">Contact <%= @user.first_name %></a>
-  </div>
-<% end %>
 
 
 
