--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -24,8 +24,8 @@
     <% end %>
 
     <% if current_user && @user != current_user %>
-      <div class='col-xs-4'>
-        <a href="/users/<%= @user.id %>/contact">Contact <%= @user.first_name %></a>
+      <div id="contact" class='col-xs-4 container-fluid'>
+        <a id="contact-link" href="/users/<%= @user.id %>/contact">Contact <%= @user.first_name %></a>
       </div>
     <% end %>
   </div>
