--- a/app/views/search.erb
+++ b/app/views/search.erb
@@ -1,18 +1,24 @@
 <div class="container-fluid">
-<form id="searchform" action='/users' method='get'>
-  Search for musicians within <input type='text' name='distance'> miles of me
-  <select name='instrument'>
-    <option value="all instruments">all instruments</option>
-    <% Instrument.all.each do |i| %>
-      <option value="<%= i.name %>"><%= i.name %></option>
-    <% end %>
-  </select>
-  <select name='genre'>
-    <option value="all genres">all genres</option>
-    <% Genre.all.each do |g| %>
-      <option value="<%= g.name %>"><%= g.name %></option>
-    <% end %>
-  </select>
-  <input type='submit'>
+<form class="form-inline" id="searchform" action='/users' method='get'>
+  <div class="form-group">
+    Search for musicians within <input type='text' name='distance'> miles of me who play
+  </div>
+  <div class="form-group">
+    <select class="form-control" name='genre'>
+     <option value="all genres">All Genres</option>
+      <% Genre.all.each do |g| %>
+        <option value="<%= g.name %>"><%= g.name %></option>
+      <% end %>
+    </select>
+  </div>
+  <div class="form-group">
+    <select class="form-control" name='instrument'>
+      <option value="all instruments">All Instruments</option>
+      <% Instrument.all.each do |i| %>
+        <option value="<%= i.name %>"><%= i.name %></option>
+      <% end %>
+    </select>
+  </div>
+  <input class="btn btn-primary" type='submit' value="Search">
 </form>
 </div>
