--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,7 @@
 <div class='container-fluid'>
   <div class="row">
-    <div class="col-xs-8">
-      <h2><%= @user.first_name %> <%= @user.last_name%></h2>
+    <div class="col-xs-6">
+      <h2 class="user-name-display"><%= @user.first_name %> <%= @user.last_name%></h2>
       <h3><%= @user.city %>, <%= @user.state %></h3>
       <h3>About Me</h3>
       <p><%= @user.about_me %></p>
@@ -16,16 +16,16 @@
     </div>
 
     <% if @user == current_user %>
-      <div class="col-xs-4" id="edit-links">
-        <a class="btn btn-primary" href="/users/<%= current_user.id %>/edit">Update Personal Info</a><br>
-        <a class="checkbox-link btn btn-primary" href="/users/<%= current_user.id %>/instruments/edit">Edit Instruments</a><br>
-        <a class="checkbox-link btn btn-primary" href="/users/<%= current_user.id %>/genres/edit">Edit Genres</a>
+      <div class="col-xs-6" id="edit-links">
+        <a class="btn btn-primary pull-right" href="/users/<%= current_user.id %>/edit">Update Personal Info</a>
+        <a class="checkbox-link btn btn-primary pull-right" href="/users/<%= current_user.id %>/instruments/edit">Edit Instruments</a>
+        <a class="checkbox-link btn btn-primary pull-right" href="/users/<%= current_user.id %>/genres/edit">Edit Genres</a>
       </div>
     <% end %>
 
     <% if current_user && @user != current_user %>
       <div id="contact" class='col-xs-4 container-fluid'>
-        <a class="btn btn-primary" id="contact-link" href="/users/<%= @user.id %>/contact">Contact <%= @user.first_name %></a>
+        <a class="btn btn-primary pull-right" id="contact-link" href="/users/<%= @user.id %>/contact">Contact <%= @user.first_name %></a>
       </div>
     <% end %>
   </div>
