--- a/app/views/users/_contact.erb
+++ b/app/views/users/_contact.erb
@@ -1,8 +1,16 @@
 <div>
   <form id="email-form" action="/users/<%= @user.id %>/contact" method="post">
-    Subject: <input type="text" name="subject"><br>
-    Body: <textarea rows="10" cols="50" name="body"></textarea>
-    <input type="submit" >
+    <div class="form-group row">
+      <label class="col-xs-2 col-form-label">Subject</label>
+      <div class="col-xs-10">
+        <input class="form-control" type="text" name="subject">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-xs-2 col-form-label">Body</label>
+      <textarea class="form-control" rows="10" cols="50" name="body"></textarea>
+    </div>
+    <input class="btn btn-primary form-control" type="submit" value="Send" >
   </form>
 </div>
 
